fix title on tab

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0, shrink-to-fit=no'>
     <meta name="theme-color" content="#000000">
-    <title>Boilermaker</title>
+    <title>BathTub</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="https://js.stripe.com/v3/"></script> <!-- see if script is ok here or if it needs to be after bundle -->
     <script defer src="/bundle.js"></script>
