--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width initial-scale=1.0, shrink-to-fit=no'>
-    <meta name="theme-color" content="#000000">
-    <title>BathTub</title>
-    <link rel="stylesheet" href="/style.css" />
-    <script src="https://js.stripe.com/v3/"></script> <!-- see if script is ok here or if it needs to be after bundle -->
-    <script defer src="/bundle.js"></script>
-    <script src="https://js.stripe.com/v3/"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
-</html>
 
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width initial-scale=1.0, shrink-to-fit=no'>
+  <meta name="theme-color" content="#000000">
+  <title>BathTub</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="/style.css" />
+  <script src="https://js.stripe.com/v3/"></script>
+  <!-- see if script is ok here or if it needs to be after bundle -->
+  <script defer src="/bundle.js"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
+</html>
